<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Rock, Scissors, Shoot!</string>
    <string name="settings_activity_label">Settings</string>
    <string name="info_activity_label">Info</string>
    <string name="exit_label">Exit</string>
    <string name="score">Score:</string>
    <string name="action_settings">Settings</string>
    <string name="game_settings">Game</string>
    <string name="option_number_of_points">Number of points to win</string>
    <string name="option_game_mode">Game mode</string>
    <string name="player_won">You won!</string>
    <string name="player_one_won">Player One won!</string>
    <string name="computer_won">You lost..</string>
    <string name="player_two_won">Player Two won!</string>
    <string name="player_two">Player Two</string>
    <string name="computer"> Computer</string>
    <string name="player_one">Player One</string>
    <string name="you">You</string>
    <string name="draw">Draw.</string>
    <string name="game_over">Game over, winner </string>
    <string name="app_settings">App</string>
    <string name="option_language">Language</string>
    <string name="option_theme">Theme</string>
    <string name="current_step_info">Current step now:</string>
    <string name="player_one_figure">Player1\'s chosen figure</string>
    <string name="player_two_figure">Player2\'s chosen figure</string>
    <string name="option_sound">Sound</string>
</resources>